tests/parsing/smtlib/poly/errors/037_match_case_list_unopened_2.expected
File "tests/parsing/smtlib/poly/errors/037_match_case_list_unopened_2.psmt2", line 3, character 33-37:
3 | (define-fun f ((x t)) t (match x with))
                                     ^^^^
Error while parsing a match, read the symbol 'with',
      but expected a match case list, starting with an opening parenthesis.
